--- a/index.html
+++ b/index.html
@@ -13,47 +13,60 @@
 
         var game = new Phaser.Game(1136, 640, Phaser.AUTO, '', { preload: preload, create: create, update: update });
         var start_swipe_point = new Phaser.Point(0,0);
-        var logo;
+        var isDragging = false;
+        var curGroup;
+        var foodGroup;
+        var i;
+        var counter = 4;
         start_swipe = function (pointer) {
-            start_swipe_point = new Phaser.Point(pointer.x, pointer.y);
+            isDragging = true;
         };
 
         end_swipe = function (pointer) {
-            var swipe_length, cut_style, cut;
-            end_swipe_point = new Phaser.Point(pointer.x, pointer.y);
-            swipe_length = Phaser.Point.distance(end_swipe_point, start_swipe_point);
-            if (swipe_length >= 3) {
-                var swipe = new Phaser.Line(start_swipe_point.x, start_swipe_point.y, end_swipe_point.x, end_swipe_point.y);
-            }
-            console.log(swipe_length);
-            console.log(start_swipe_point);
-            console.log(end_swipe_point);
-            deltaY = end_swipe_point.y - start_swipe_point.y;
-            deltaX = end_swipe_point.x - start_swipe_point.x;
-            angleInDegrees = Math.atan2(deltaY, deltaX) * (180 / 3.14);
-            direction = ((angleInDegrees / 45));
-            if(direction < 0){
-                direction = 8 + direction;
-            }
-            console.log(direction);
-            //TODO: 
+            isDragging = false;
+
+            //TODO: IF start_swipe_point is between sprite.width - (sprite.width * .6) and sprite.width - (sprite.width * .4)
         };
+        check_collision = function () {
+            for(i = 0; i < foodGroup.length; i++){
+                if(foodGroup[i].contains(curGroup[0].x, curGroup[0].y)){
+                    deltaY = curGroup[1].y - curGroup[0].y;
+                    deltaX = curGroup[1].x - curGroup[0].x;
+                    angle = Math.atan2(deltaY, deltaX) * 180 / 3.14;
+                    //Check if the angle lines up with food direction
+                    //Also check to make sure cut is in the center of the food?
+                }
+            }
+        }
 
         function preload () {
 
-            game.load.image('logo', 'phaser.png');
 
         }
 
         function create () {
 
-            logo = game.add.sprite(game.world.centerX, game.world.centerY, 'logo');
-            logo.anchor.setTo(0.5, 0.5);
+            curGroup = [];
+            for(i = 0; i < 3; i++)
+            {
+                curGroup.push(new Phaser.Point(0,0));
+            }
 
         }
         function update() {
             game.input.onDown.add(start_swipe, this);
-            game.input.onUp.add(end_swipe, this); 
+            game.input.onUp.add(end_swipe, this);
+            if(isDragging && counter < 1)
+            {
+                curGroup[2] = curGroup[1];
+                curGroup[1] = curGroup[0];
+                curGroup[0] = new Phaser.Point(game.input.x, game.input.y);
+                console.log(curGroup[0]);
+                counter = 4;
+            }
+            else{
+                counter--;
+            }
 
         }
 
