--- a/InsertNameHere.html
+++ b/InsertNameHere.html
@@ -20,11 +20,11 @@ function preload(){
 	//sprite for dish2
     game.load.image('plate2', 'gameboy64x64.png');
 	//sprite for tomato
-    game.load.image('tomato', 'Tomato_exReSizeIgor.png');
+    game.load.image('tomato', 'food/foodTomato_static.png');
 	//sprite for steak
-    game.load.image('steak', 'SteakCut.png');
+    game.load.image('steak', 'food/foodSteak_static.png');
 	//sprite for potato
-    game.load.image('potato', 'potatoCut.png');
+    game.load.image('potato', 'food/foodPotato_static.png');
 }
 
 var topCollider;
@@ -52,12 +52,70 @@ var gamsStarText;
 //variable for the score
 //var aScore=0;
 //var scoreText;
+var start_swipe_point = new Phaser.Point(0,0);
+var isDragging = false;
+var curGroup;
+var foodGroup;
+var i;
+var j;
+var counter = 4;
+start_swipe = function (pointer) {
+    isDragging = true;
+};
+
+end_swipe = function (pointer) {
+    isDragging = false;
+    
+
+    //TODO: IF start_swipe_point is between sprite.width - (sprite.width * .6) and sprite.width - (sprite.width * .4)
+};
+check_collision = function () {
+    deltaY = curGroup[1].y - curGroup[0].y;
+    deltaX = curGroup[1].x - curGroup[0].x;
+    angle = Math.atan2(deltaY, deltaX) * 180 / 3.14;
+    for(j = 0; j < steaks.children.length; j++){        
+        /*if(steaks.children[j].body.x < curGroup[0].x && steaks.children[j].body.right > curGroup[0].x && steaks.children[j].body.y < curGroup[0].y && steaks.children[j].body.bottom){*/
+        if(isCutting(steaks.children[j].body, curGroup)){
+            if(angle > 150 && angle < 210 || angle > -180 && angle < -150){
+                steaks.children[j].kill();
+                //Kill code for those poor steaks
+            }
+        }
+    }
+    for(j = 0; j < tomatoes.children.length; j++){
+        if(isCutting(tomatoes.children[j].body, curGroup)){
+            if(angle > -30 && angle < 30){
+                tomatoes.children[j].kill();
+                //Kill code for those poor tomatoes
+            }
+        }
+    }
+    for(j = 0; j < potatoes.children.length; j++){
+        if(isCutting(potatoes.children[j].body, curGroup)){
+            if(angle > -120 && angle < -60){
+                potatoes.children[j].kill();
+                //Kill code for those poor potatoes
+            }
+        }
+    }
+}
+function isCutting(body, curGroup)
+{
+    if(body.x < curGroup[0].x && body.right > curGroup[0].x && body.y < curGroup[0].y && body.bottom){
+        return true;
+    }
+    return false
+}
 function create()
 {
 	game.physics.startSystem(Phaser.Physics.ARCADE);
 	//background
 	//game.add.sprite(0,0, 'sky');
-	
+	curGroup = [];
+    for(i = 0; i < 3; i++)
+    {
+        curGroup.push(new Phaser.Point(0,0));
+    }
 	topCollider = game.add.sprite(0,100, 'tomato');
 	game.physics.enable(topCollider, Phaser.Physics.ARCADE);
 	topCollider.body.setSize(1334,5,0,0);
@@ -199,6 +257,20 @@ function update()
 	game.physics.arcade.collide(tomatoes, bottomCollider);
 	game.physics.arcade.collide(potatoes, topCollider);
 	game.physics.arcade.collide(potatoes, bottomCollider);
+    game.input.onDown.add(start_swipe, this);
+    game.input.onUp.add(end_swipe, this);
+    if(isDragging && counter < 1)
+    {
+        curGroup[2] = curGroup[1];
+        curGroup[1] = curGroup[0];
+        curGroup[0] = new Phaser.Point(game.input.x, game.input.y);
+        counter = 2;
+        check_collision();
+    }
+    else if(isDragging){
+        counter--;
+        check_collision();
+    }
 }
 function collisionHandler (obj1, obj2) {
 
