--- a/index.html
+++ b/index.html
@@ -1,78 +1,464 @@
-<!doctype html>
+
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>The Food is Alive</title>
-        <script src="phaser.js"></script>
-    </head>
-    <body>
+<head>
+<title>InsertTitleHere</title>
 
-    <script type="text/javascript">
+<script type="text/javascript" src="js/phaser.js"></script>
+</head>
 
-    window.onload = function() {
+<body>
 
-        var game = new Phaser.Game(1136, 640, Phaser.AUTO, '', { preload: preload, create: create, update: update });
-        var start_swipe_point = new Phaser.Point(0,0);
-        var isDragging = false;
-        var curGroup;
-        var foodGroup;
-        var i;
-        var counter = 4;
-        start_swipe = function (pointer) {
-            isDragging = true;
-        };
+<script type="text/javascript"> 
+var game = new Phaser.Game(1334,750, Phaser.AUTO, '', 
+{ preload: preload, create: create, update: update });
 
-        end_swipe = function (pointer) {
-            isDragging = false;
+function preload(){
+	//background
+	game.load.image ('sky', 'sky.png');
+    //sprite for dish1
+	game.load.image('plate1', 'mushroom2.png');
+	//sprite for dish2
+    game.load.image('plate2', 'gameboy64x64.png');
+	//sprite for tomato
+    game.load.image('tomato', 'food/foodTomato_static.png');
+    //sprite for dead tomato
+    game.load.image('tomato_dead', 'food/foodTomato_deadHighRes.png');
+	//sprite for steak
+    game.load.image('steak', 'food/foodSteak_static.png');
+    //sprite for dead steak
+    game.load.image('steak_dead', 'food/foodSteak_deadHighRes.png');
+	//sprite for potato
+    game.load.image('potato', 'food/foodPotato_static.png');
+    //sprite for dead potato
+    game.load.image('potato_dead', 'food/foodPotato_deadHighRes.png');
+}
 
-            //TODO: IF start_swipe_point is between sprite.width - (sprite.width * .6) and sprite.width - (sprite.width * .4)
-        };
-        check_collision = function () {
-            for(i = 0; i < foodGroup.length; i++){
-                if(foodGroup[i].contains(curGroup[0].x, curGroup[0].y)){
-                    deltaY = curGroup[1].y - curGroup[0].y;
-                    deltaX = curGroup[1].x - curGroup[0].x;
-                    angle = Math.atan2(deltaY, deltaX) * 180 / 3.14;
-                    //Check if the angle lines up with food direction
-                    //Also check to make sure cut is in the center of the food?
-                }
-            }
+var topCollider;
+var bottomCollider;
+//this will be used for spawning
+var dish;
+var x=0;
+var y=0;
+//delay timer for spawning dish
+var dishTime = 0;
+//delay time for tomato;
+var tomatoTime=0;
+//delay time for steak;
+var steakTime=0;
+//delay time for potato;
+var potatoTime=0;
+//simple boolean used to start game
+var inMenuScreen = true;
+//boolean that will activate once hasStarted = false;
+var canSpawn = false;
+//interger used for whish dish to spawn
+var ranD;
+//variable that will change once the game has started
+var gamsStarText;
+//variable for the score
+//var aScore=0;
+//var scoreText;
+var start_swipe_point = new Phaser.Point(0,0);
+var isDragging = false;
+var curGroup;
+var foodGroup;
+var i;
+var j;
+var counter = 4;
+start_swipe = function (pointer) {
+    isDragging = true;
+};
+
+end_swipe = function (pointer) {
+    isDragging = false;
+    
+
+    //TODO: IF start_swipe_point is between sprite.width - (sprite.width * .6) and sprite.width - (sprite.width * .4)
+};
+check_collision = function () {
+    deltaY = curGroup[1].y - curGroup[0].y;
+    deltaX = curGroup[1].x - curGroup[0].x;
+    angle = Math.atan2(deltaY, deltaX) * 180 / 3.14;
+    for(j = 0; j < steaks.children.length; j++){        
+        /*if(steaks.children[j].body.x < curGroup[0].x && steaks.children[j].body.right > curGroup[0].x && steaks.children[j].body.y < curGroup[0].y && steaks.children[j].body.bottom){*/
+        if(isCutting(steaks.children[j].body, curGroup)){
+            steaks.children[j].loadTexture('steak_dead', 0);
+            steaks.children[j].body.velocity.x = 0;
+            game.physics.arcade.enable(steaks.children[j]);
+            steaks.children[j].moves = false;
+            steaks.children[j].inputEnabled = true;
+            steaks.children[j].input.enableDrag();
+            steaks.children[j].events.onDragStart.add(end_swipe, this);
+
+                //Kill code for those poor steaks
         }
-
-        function preload () {
-
-
+    }
+    for(j = 0; j < tomatoes.children.length; j++){
+        if(isCutting(tomatoes.children[j].body, curGroup)){
+            tomatoes.children[j].loadTexture('tomato_dead', 0);
+            tomatoes.children[j].body.velocity.x = 0;
+            game.physics.arcade.enable(tomatoes.children[j]);
+            tomatoes.children[j].moves = false;
+            tomatoes.children[j].inputEnabled = true;
+            tomatoes.children[j].input.enableDrag();
+            tomatoes.children[j].events.onDragStart.add(end_swipe, this);
+            //Spawn a dead tomato in the same spot
+                //Kill code for those poor tomatoes
         }
-
-        function create () {
-
-            curGroup = [];
-            for(i = 0; i < 3; i++)
-            {
-                curGroup.push(new Phaser.Point(0,0));
-            }
-
+    }
+    for(j = 0; j < potatoes.children.length; j++){
+        if(isCutting(potatoes.children[j].body, curGroup)){
+            potatoes.children[j].loadTexture('potato_dead', 0);
+            potatoes.children[j].body.velocity.x = 0;
+            game.physics.arcade.enable(potatoes.children[j]);
+            potatoes.children[j].moves = false;
+            potatoes.children[j].inputEnabled = true;
+            potatoes.children[j].input.enableDrag();
+            potatoes.children[j].events.onDragStart.add(end_swipe, this);
+                //Kill code for those poor potatoes
         }
-        function update() {
-            game.input.onDown.add(start_swipe, this);
-            game.input.onUp.add(end_swipe, this);
-            if(isDragging && counter < 1)
-            {
-                curGroup[2] = curGroup[1];
-                curGroup[1] = curGroup[0];
-                curGroup[0] = new Phaser.Point(game.input.x, game.input.y);
-                console.log(curGroup[0]);
-                counter = 4;
-            }
-            else{
-                counter--;
-            }
+    }
+}
+function isCutting(body, curGroup)
+{
+    if(body.x < curGroup[0].x && body.right > curGroup[0].x && body.y < curGroup[0].y && body.bottom > curGroup[0].y && isDragging){
+    	console.log("We got a cut");
+        return true;
+    }
+    return false
+}
+function create()
+{
+	game.physics.startSystem(Phaser.Physics.ARCADE);
+	//background
+	//game.add.sprite(0,0, 'sky');
+	curGroup = [];
+    for(i = 0; i < 3; i++)
+    {
+        curGroup.push(new Phaser.Point(0,0));
+    }
+	topCollider = game.add.sprite(0,100, 'tomato');
+	game.physics.enable(topCollider, Phaser.Physics.ARCADE);
+	topCollider.body.setSize(1334,5,0,0);
+	topCollider.body.immovable = true;
+	topCollider.visible=false;
+	bottomCollider = game.add.sprite(0,500, 'tomato');
+	game.physics.enable(bottomCollider, Phaser.Physics.ARCADE);
+	bottomCollider.body.setSize(1334,5,0,0);
+	bottomCollider.body.immovable = true;
+	bottomCollider.visible=false;	
+	
+	//first group of dishes
+	dishesG = game.add.group();
+    dishesG.enableBody = true;
+    dishesG.physicsBodyType = Phaser.Physics.ARCADE;
+	
+	//second group of dishes
+	dishesG2 = game.add.group();
+    dishesG2.enableBody = true;
+    dishesG2.physicsBodyType = Phaser.Physics.ARCADE;
+	
+	//group of tomatoes
+	tomatoes = game.add.group();
+    tomatoes.enableBody = true;
+    tomatoes.physicsBodyType = Phaser.Physics.ARCADE;
+	//group of steak
+	steaks = game.add.group();
+    steaks.enableBody = true;
+    steaks.physicsBodyType = Phaser.Physics.ARCADE;
+	//group of potato
+	potatoes = game.add.group();
+    potatoes.enableBody = true;
+    potatoes.physicsBodyType = Phaser.Physics.ARCADE;
+	
+	//spawn all the tomatoes but they are no visible yet
+	for (var i = 0; i < 250; i++)
+    {
+		//create the variable with the first dish sprite
+        var aTomato = tomatoes.create(0, 0, 'tomato');
+		aTomato.name = 'tomato.' + i;
+		//don't spawn it yet
+        aTomato.exists = false;
+        aTomato.visible = false;
+		//activate world bounds with the object so that it can die when its complete
+        aTomato.checkWorldBounds = true;
+		aTomato.body.bounce.set(1);
+        aTomato.events.onOutOfBounds.add(resetItem, this);
+    }
+	//spawn all the steak but they are no visible yet
+	for (var i = 0; i < 250; i++)
+    {
+		//create the variable with the first dish sprite
+        var aSteak = steaks.create(0, 0, 'steak');
+		aSteak.name = 'steak.' + i;
+		//don't spawn it yet
+        aSteak.exists = false;
+        aSteak.visible = false;
+		//activate world bounds with the object so that it can die when its complete
+        aSteak.checkWorldBounds = true;
+		aSteak.body.bounce.set(1);
+        aSteak.events.onOutOfBounds.add(resetItem, this);
+    }
+	//spawn all the potato but they are no visible yet
+	for (var i = 0; i < 250; i++)
+    {
+		//create the variable with the first dish sprite
+        var aPotato = potatoes.create(0, 0, 'potato');
+		aPotato.name = 'potato.' + i;
+		//don't spawn it yet
+        aPotato.exists = false;
+        aPotato.visible = false;
+		aPotato.body.bounce.set(1);
+		//activate world bounds with the object so that it can die when its complete
+        aPotato.checkWorldBounds = true;
+        aPotato.events.onOutOfBounds.add(resetItem, this);
+    }
 
+	//spawn all the dishes but they are no visible yet
+	for (var i = 0; i < 10; i++)
+    {
+		//create the variable with the first dish sprite
+        var aDish = dishesG.create(0, 0, 'plate1');
+		aDish.name = 'dish1.' + i;
+		//don't spawn it yet
+        aDish.exists = false;
+        aDish.visible = false;
+		//activate world bounds with the object so that it can die when its complete
+        aDish.checkWorldBounds = true;
+        aDish.events.onOutOfBounds.add(resetDish, this);
+    }
+	//duplicated from above
+	for (var i = 0; i < 10; i++)
+    {
+        var aDish = dishesG2.create(0, 0, 'plate2');
+        aDish.name = 'dish2.' + i;
+        aDish.exists = false;
+        aDish.visible = false;
+        aDish.checkWorldBounds = true;
+        aDish.events.onOutOfBounds.add(resetDish, this);
+    }
+	gameStartText = game.add.text(game.world.centerX, 500, 'Tap anywhere to start.', { font: "40px Arial", fill: "#ffffff", align: "center" });
+    gameStartText.anchor.setTo(.5, .5);
+	game.input.onDown.add(beginGame, this);
+
+	//game.input.onDown.add(PlusScore, this);	
+	//scoreText = game.add.text(30, 30, 'score: 0', { font: "20px Arial", fill: "#ffffff", align: "left" });
+	
+}
+
+function beginGame()
+{
+	if(inMenuScreen)
+	{
+		gameStartText.visible=false;
+		canSpawn=true;
+		inMenuScreen = false;
+	}
+	
+	
+}
+/*function PlusScore()
+{
+	aScore=aScore+10;
+	scoreText.text = 'score: '+aScore;
+}*/
+function update()
+{
+	// make a function that checks if the dishes are complete
+	if(canSpawn)
+	{
+		spawnDishes();
+		spawnTomato();
+		spawnPotato();
+		spawnSteak();
+	}
+	game.physics.arcade.collide(steaks, topCollider);
+	game.physics.arcade.collide(steaks, bottomCollider);
+	game.physics.arcade.collide(tomatoes, topCollider);
+	game.physics.arcade.collide(tomatoes, bottomCollider);
+	game.physics.arcade.collide(potatoes, topCollider);
+	game.physics.arcade.collide(potatoes, bottomCollider);
+    game.input.onDown.add(start_swipe, this);
+    game.input.onUp.add(end_swipe, this);
+    if(isDragging && counter < 1)
+    {
+        curGroup[2] = curGroup[1];
+        curGroup[1] = curGroup[0];
+        curGroup[0] = new Phaser.Point(game.input.x, game.input.y);
+        counter = 2;
+        check_collision();
+    }
+    else if(isDragging){
+        counter--;
+        check_collision();
+    }
+}
+function collisionHandler (obj1, obj2) {
+
+	obj1.body.velocity.y = obj1.body.velocity.y*-1;
+}
+//make a function for when the dishes are complete put sounds and such for it
+function spawnDishes()
+{
+	//timer so that the dishes spawn with enough space on them
+	if (game.time.now > dishTime)
+    {
+		//random counter to spawn dishes
+		ranD = Math.floor(Math.random()*2);
+		if(ranD==1)
+		{
+			dish = dishesG.getFirstExists(false);
+		}
+		else{
+			dish = dishesG2.getFirstExists(false);
+		}
+        if (dish)
+        {
+			//spawn the dishes offscreen so they can go and move into the screen
+            dish.reset(-200, 620);
+			//with the velocity, speed of 130 = 10seconds... 43==30seconds or so
+            dish.body.velocity.x = 43;
+			//spawn timer... 5000 = 5 sec.
+            dishTime = (game.time.now + 5000+Math.random()*4000)/*-aScore*/;
         }
+    }
+	
+}
+function spawnTomato()
+{
+	//timer so that the dishes spawn with enough space on them
+	if (game.time.now > tomatoTime)
+    {
+		//random counter to spawn dishes
+		ranD = Math.floor(Math.random()*2);
+		tomato = tomatoes.getFirstExists(false);
+        if (tomato)
+        {
+			y = Math.floor(Math.random()*400)+100;
+			if(ranD==1)
+			{
+				//spawn the dishes offscreen so they can go and move into the screen
+				tomato.reset(-200,y);
+				tomato.body.velocity.x = 130+Math.random()*100;
+			}else{
+				tomato.reset(1334,y);
+				tomato.body.velocity.x = (130+Math.random()*100)*(-1);
+				}
+			
+			ranD = Math.floor(Math.random()*2);
+			if(ranD==1)
+			{
+				tomato.body.velocity.y = (Math.random()*100)*-1;
+			}else{
+				tomato.body.velocity.y = (Math.random()*100);
+			}
+			//spawn timer... 5000 = 5 sec.
+            tomatoTime = (game.time.now + Math.random()*5000);
+        }
+    }
+	
+}
+function spawnPotato()
+{
+	//timer so that the dishes spawn with enough space on them
+	if (game.time.now > potatoTime)
+    {
+		//random counter to spawn dishes
+		ranD = Math.floor(Math.random()*2);
+		potato = potatoes.getFirstExists(false);
+        if (potato)
+        {
+			y = Math.floor(Math.random()*400)+100;
+			if(ranD==1)
+			{
+				//spawn the dishes offscreen so they can go and move into the screen
+				potato.reset(-200,y);
+				potato.body.velocity.x = 130+Math.random()*100;
+			}else{
+				potato.reset(1334,y);
+				potato.body.velocity.x = (130+Math.random()*100)*(-1);
+				}
+			
+			ranD = Math.floor(Math.random()*2);
+			if(ranD==1)
+			{
+				potato.body.velocity.y = (Math.random()*100)*-1;
+			}else{
+				potato.body.velocity.y = (Math.random()*100);
+			}
+			//spawn timer... 5000 = 5 sec.
+            potatoTime = (game.time.now + Math.random()*5000);
+        }
+    }
+	
+}
+function spawnSteak()
+{
+	//timer so that the dishes spawn with enough space on them
+	if (game.time.now > steakTime)
+    {
+		//random counter to spawn dishes
+		ranD = Math.floor(Math.random()*2);
+		steak = steaks.getFirstExists(false);
+        if (steak)
+        {
+			y = Math.floor(Math.random()*400)+100;
+			if(ranD==1)
+			{
+				//spawn the dishes offscreen so they can go and move into the screen
+				steak.reset(-200,y);
+				steak.body.velocity.x = 130+Math.random()*100;
+			}else{
+				steak.reset(1334,y);
+				steak.body.velocity.x = (130+Math.random()*100)*(-1);
+				}
+			
+			ranD = Math.floor(Math.random()*2);
+			if(ranD==1)
+			{
+				steak.body.velocity.y = (Math.random()*100)*-1;
+			}else{
+				steak.body.velocity.y = (Math.random()*100);
+			}
+			//spawn timer... 5000 = 5 sec.
+            steakTime = (game.time.now + Math.random()*5000);
+        }
+    }
+	
+}
+function resetDish(dish)
+{
+	//picked 200 so that when it spawns it does not kill because dish spawns at x=-200
+	// and that is out of bounds
+	//add sound maybe if the player does not complete??
+	if(dish.x>200)
+	{
+		dish.kill();
+	}
+}
+function resetItem(item)
+{
+	//picked 200 so that when it spawns it does not kill because tomatoe sprite could go to spawns at x=-200 and x = 1534
+	// and that is out of bounds
+	//add sound maybe if the player does not complete??
+	if(item.x>1354)
+	{
+		item.kill();
+	}
+	else if(item.x<-200)
+	{
+		item.kill();
+	}
+}
 
-    };
+function render() {
 
-    </script>
+    game.debug.bodyInfo(steaks, 32, 32);
 
-    </body>
+    game.debug.body(steaks);
+
+}
+
+</script>
+</body>
 </html>
